--- a/src/app/financing/financing.component.html
+++ b/src/app/financing/financing.component.html
@@ -7,12 +7,15 @@
     </div>
 
 </header>
-<!-- <div class="ml-5" style="width: 92%;">
-    <div class="row mt-5" *ngIf="alert.show">
-        <div class="col-sm-12 col-md-6 mx-auto">
-            <ngb-alert *ngIf="alert.show" [type]="alert.type" (close)="alert.show = false;">{{ alert.message | translate }}</ngb-alert>
+    <div class="container">
+      <div class="row mt-2" *ngIf="alert.show">
+        <div class="col-sm-12 col-md-6 mx-auto">  
+          <div class="alert alert-danger alert-fixed-top" [ngClass]="{'show': showError}" *ngIf="showError">
+            {{ alertMessage }}
+          </div>
         </div>
-    </div>-->
+      </div>
+  </div>
 <form [formGroup]="financing_form">
   <div class="card-propietary ml-4">
     <div class="title">
@@ -57,6 +60,15 @@
                 </div>
               </div>
           </div> 
+          <div class="col-lg-2">
+            <div class="form-outline">
+              <strong class="form-label required" for="form3Examplea8">Tipo</strong>
+              <select formControlName="xvehiculo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && financing_form.get('xvehiculo').errors } " (change)="mountQuotes()">
+                <option value="Vehiculo">Vehiculo</option>
+                <option value="Motocicleta">Motocicleta</option>
+              </select>                      
+            </div> 
+          </div>
           <div class="col-lg-3">
             <div class="form-outline">
                 <strong class="form-label" for="form3Examplev5">Vehículo del Propietario</strong>
@@ -77,15 +89,6 @@
             </div>
           </div>
           <div class="col-lg-2">
-            <div class="form-outline">
-              <strong class="form-label required" for="form3Examplea8">Tipo</strong>
-              <select formControlName="xvehiculo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && financing_form.get('xvehiculo').errors } " (change)="mountQuotes()">
-                <option value="Vehiculo">Vehiculo</option>
-                <option value="Motocicleta">Motocicleta</option>
-              </select>                      
-            </div> 
-          </div>
-          <div class="col-lg-2">
               <div class="form-outline form-white">
                 <strong class="form-label required" for="form3Examplea8">Identificación</strong>
                 <p class="mt-3">{{documento}}</p>
@@ -104,7 +107,7 @@
               <strong class="form-label required" for="form3Examplea8">Correo</strong>
                 <p class="mt-3 text-lowercase">{{correo}}</p>
             </div>
-        </div>
+          </div>
 
           <div class="col-lg-3">
               <div class="form-outline form-white">
@@ -162,163 +165,14 @@
               </div>
             </div>
           </div>
-
-          <!-- <div class="image-container"></div> -->
         </div>
     </div>
   </div>
-  <!-- <div class=" ml-2">
-      <div class="card" style="--bs-gutter-x: 2.8rem; margin-top: 15px;width: 99%;" *ngIf="activeProviders">
-        <div class="row ">
-
-          <div class="card-error container registration-form" *ngIf="activateError">
-              <a class="card1">
-              <p>Error</p>
-              <p class="small">{{this.errorMessage}}</p>
-              <div class="go-corner">
-                <div class="go-arrow">
-                  →
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="loader container registration-form" *ngIf="activateLoader"></div>
-
-          <div formArrayName="proveedores" class="col-lg-8" >
-            <p class="title">Lista de Proveedores</p>
-            <table class="table-responsive" style="--bs-gutter-x: 2.8rem; margin-top: 15px;" *ngIf="providerList && providerList.length > 0">
-              <thead class="thead-light"> 
-                <tr>
-                  <th scope="col">Proveedor</th>
-                  <th scope="col">Teléfono</th>
-
-                  <th scope="col"  *ngIf="replacement" >Repuestos</th>
-                  <th scope="col"  *ngIf="replacement">Cantidad</th>
-                  <th scope="col">Precio</th>
-                  <th scope="col"></th>
-                </tr>
-              </thead>
-              <tbody *ngFor="let creds of proveedores.controls; let i=index">
-                <tr  [formGroupName]="i">
-
-                  <td>{{ creds.value.xproveedor }}</td>
-
-                  <td>{{ creds.value.xtelefono }}</td>
-
-
-                  <td *ngIf="replacement">
-    
-                          <div >
-                          <ng-autocomplete  
-                          [data]="replacementList" 
-                          [searchKeyword]="keyword" 
-                          formControlName="crepuesto"
-                          placeholder="Seleccionar Repuesto" 
-                          [itemTemplate]="itemTemplate" 
-                          [notFoundTemplate]="notFoundTemplate">                                 
-                          </ng-autocomplete>
-                      
-                          <ng-template #itemTemplate let-item >
-                              <a [innerHTML]="item.value"></a>
-                          </ng-template>
-                      
-                          <ng-template #notFoundTemplate let-notFound  >
-                              <div [innerHTML]="notFound"></div>
-                          </ng-template>
-                        </div>
-
-                  </td>
-
-                  <td class="items" *ngIf="replacement">
-                    <input type="number" formControlName="cantidad" class="form-control form-control-alternative" />
-                  </td>
-
-                  <td class="items">
-                    <input type="number" formControlName="monto" class="form-control form-control-alternative" />
-                  </td>
-
-                  <td><button class="follow" (click)="addpprovider(i)">Seleccionar</button></td>
-                </tr>
-              </tbody>
-            </table>
-           </div> -->
-
-          <!-- <div style="display: grid;place-items: center;margin-top: 27px;">
-            <ngb-pagination [(page)]="currentPage" [pageSize]="itemsPerPage" [collectionSize]="providerList.length" [maxSize]="5" [rotate]="true"></ngb-pagination>
-          </div> -->
-          <!-- <div class="row">
-            <div formArrayName="proveedores_seleccionados" class="col-lg-4" *ngIf="providerSelected">
-              <p class="title">Lista de Proveedores seleccionados</p>
-              <table class="table-responsive" style="--bs-gutter-x: 2.8rem; margin-top: 15px;" *ngIf="providerList && providerList.length > 0">
-                <thead class="thead-light">  -->
-                  <!-- <tr> -->
-                    <!-- <th scope="col">Proveedor</th> -->
-  
-                    <!-- <th scope="col"  *ngIf="replacement" >Repuestos</th>
-                    <th scope="col"  *ngIf="replacement">Cantidad</th> -->
-                    <!-- <th scope="col">Precio</th>
-                    <th scope="col"></th>
-                  </tr>
-                </thead>
-                <tbody *ngFor="let creds of proveedores_seleccionados.controls; let i=index">
-                  <tr  [formGroupName]="i">
-  
-                    <td>{{ creds.value.xproveedor }}</td> -->
-  
-  
-                    <!-- <td *ngIf="replacement">
-      
-                      {{ creds.value.xrepuesto }}
-  
-                    </td>
-  
-                    <td class="items" *ngIf="replacement">
-                      {{ creds.value.cantidad }}
-                    </td> -->
-  
-                    <!-- <td class="items">
-                      {{ creds.value.monto }}
-                    </td>
-  
-                    <td><button class="follow" (click)="removeprovider(i)">Eliminar</button></td>
-                  </tr>
-                </tbody>
-              </table>
-   -->
-              <!-- <div style="margin-left: auto;">
-                <div class="pricingTable ">
-                  <div class="pricing_heading">
-                      <h3 class="title"></h3>
-                      <span class="value">
-                        Financiar {{Mountfinancing}} $
-                        Total {{ sumofamounts}}
-                      </span>
-                  </div>
-                  <div class="content">
-                      <ul>
-                          <li>Lorem ipsum</li>
-                          <li>Lorem ipsum</li>
-                          <li>Lorem ipsum</li>
-                          <li>Lorem ipsum</li>
-                          <li>Lorem ipsum</li>
-                      </ul>
-                      <div class="link">
-                          <a href="#">sign up</a>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
-  <!-- </div> --> 
-
   <div class="ml-4" *ngIf="activeProviders">
     <div class="row" style="width: 100%;">
-      <div class="col-md-6" *ngIf="activeProviders">
+      <div class="col-md-7" *ngIf="activeProviders">
         <div class="card" style="--bs-gutter-x: 2.8rem; margin-top: 15px;">
-          <div class="card-error container registration-form" *ngIf="activateError">
+          <!-- <div class="card-error container registration-form" *ngIf="activateError">
             <a class="card1">
             <p>Error</p>
             <p class="small">{{this.errorMessage}}</p>
@@ -328,7 +182,7 @@
               </div>
             </div>
           </a>
-        </div>
+          </div> -->
         <div class="loader container registration-form" *ngIf="activateLoader"></div>
 
         <div formArrayName="proveedores" class="col-lg-12" >
@@ -391,14 +245,14 @@
         </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-5">
         <div class="card" style="--bs-gutter-x: 2.8rem; margin-top: 15px;">
           <div formArrayName="proveedores_seleccionados" class="col-lg-12" *ngIf="providerSelected">
             <p class="title">Lista de Proveedores seleccionados</p>
             <table class="table-responsive" style="--bs-gutter-x: 2.8rem; margin-top: 15px;" *ngIf="providerList && providerList.length > 0">
               <thead class="thead-light"> 
                 <tr>
-                  <th scope="col">Proveedor</th>
+                  <th scope="col" style="width: 73%;">Proveedor</th>
 
                   <!-- <th scope="col"  *ngIf="replacement" >Repuestos</th>
                   <th scope="col"  *ngIf="replacement">Cantidad</th> -->
@@ -428,6 +282,7 @@
 
                   <td><button class="follow" (click)="removeprovider(i)">Eliminar</button></td>
                 </tr>
+                <p>Total: {{this.sumofamounts}}$</p>
               </tbody>
             </table>
 
@@ -437,13 +292,22 @@
                     <h3 class="title"></h3>
                     <span class="value">
                       Financiamiento del 50%
-                      <!-- Total {{ sumofamounts}} -->
+                      <div class="row" *ngIf="providerSelected">
+                        <div class="col-6 ">
+                          <img src="../../assets/imagenes/acreedor.png" style="width: 20%;margin-left: 24px;">
+                          <p class="title-finan">Acreedores: {{this.half}}$</p>
+                        </div>
+                        <div class="col-5">
+                          <img src="../../assets/imagenes/beneficiario.png" style="width: 24%;margin-left: 24px;">
+                          <p class="title-finan">Beneficiarios: {{this.half}}$</p>
+                        </div>
+                      </div>
                     </span>
                 </div>
                 <div class="content">
                   <ul>
                     <li *ngFor="let item of financingList">
-                        {{ item.xtitulo }}: {{ item.xmonto_financiado }}$
+                        {{ item.xtitulo }} - {{item.fechaCuota}} - {{ item.xmonto_financiado }}$
                     </li>
                   </ul>
                 </div>
