--- a/src/app/financing/financing.component.html
+++ b/src/app/financing/financing.component.html
@@ -25,11 +25,6 @@
             Información del Propietario
           </p>
         </div>
-        <div class="col-6 image-coin" *ngIf="activateCoin" style="margin-left: 465px"> 
-          <p class="title-mount">
-            {{Mountfinancing}}$
-          </p>
-        </div>
       </div>
 
 
@@ -172,6 +167,51 @@
     <div class="row" style="width: 100%;">
       <div class="col-md-7" *ngIf="activeProviders">
         <div class="card" style="--bs-gutter-x: 2.8rem; margin-top: 15px;">
+        <div formArrayName="proveedores_seleccionados" class="col-lg-12" *ngIf="providerSelected">
+          <p class="title">Lista de Proveedores seleccionados</p>
+          <table class="table-responsive" style="--bs-gutter-x: 2.8rem; margin-top: 15px;" *ngIf="providerList && providerList.length > 0">
+            <thead class="thead-light"> 
+              <tr>
+                <th scope="col" style="width: 73%;">Proveedor</th>
+
+                <!-- <th scope="col"  *ngIf="replacement" >Repuestos</th>
+                <th scope="col"  *ngIf="replacement">Cantidad</th> -->
+                <th scope="col">Precio</th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let creds of proveedores_seleccionados.controls; let i=index">
+              <tr  [formGroupName]="i">
+
+                <td>{{ creds.value.xproveedor }}</td>
+
+
+                <!-- <td *ngIf="replacement">
+  
+                  {{ creds.value.xrepuesto }}
+
+                </td>
+
+                <td class="items" *ngIf="replacement">
+                  {{ creds.value.cantidad }}
+                </td> -->
+
+                <td class="items">
+                  {{ creds.value.monto }}$
+                </td>
+
+                <td><button class="follow" (click)="removeprovider(i)">Eliminar</button></td>
+              </tr>
+            </tbody>
+          </table>
+
+          <div class="row py-3">
+            <div class="col-4" style="margin-left: 305px;">
+              <p><strong>Total:</strong> {{this.sumofamounts}}$</p>
+            </div>
+          </div>
+        </div>
+        
           <!-- <div class="card-error container registration-form" *ngIf="activateError">
             <a class="card1">
             <p>Error</p>
@@ -245,53 +285,21 @@
         </div>
         </div>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-5"  *ngIf="providerSelected">
         <div class="card" style="--bs-gutter-x: 2.8rem; margin-top: 15px;">
-          <div formArrayName="proveedores_seleccionados" class="col-lg-12" *ngIf="providerSelected">
-            <p class="title">Lista de Proveedores seleccionados</p>
-            <table class="table-responsive" style="--bs-gutter-x: 2.8rem; margin-top: 15px;" *ngIf="providerList && providerList.length > 0">
-              <thead class="thead-light"> 
-                <tr>
-                  <th scope="col" style="width: 73%;">Proveedor</th>
-
-                  <!-- <th scope="col"  *ngIf="replacement" >Repuestos</th>
-                  <th scope="col"  *ngIf="replacement">Cantidad</th> -->
-                  <th scope="col">Precio</th>
-                  <th scope="col"></th>
-                </tr>
-              </thead>
-              <tbody *ngFor="let creds of proveedores_seleccionados.controls; let i=index">
-                <tr  [formGroupName]="i">
-
-                  <td>{{ creds.value.xproveedor }}</td>
-
-
-                  <!-- <td *ngIf="replacement">
-    
-                    {{ creds.value.xrepuesto }}
-
-                  </td>
-
-                  <td class="items" *ngIf="replacement">
-                    {{ creds.value.cantidad }}
-                  </td> -->
-
-                  <td class="items">
-                    {{ creds.value.monto }}
-                  </td>
-
-                  <td><button class="follow" (click)="removeprovider(i)">Eliminar</button></td>
-                </tr>
-                <p>Total: {{this.sumofamounts}}$</p>
-              </tbody>
-            </table>
-
-            <div style="margin-left: auto;">
+            <div style="margin-top: -31px;">
               <div class="pricingTable ">
                 <div class="pricing_heading">
                     <h3 class="title"></h3>
                     <span class="value">
-                      Financiamiento del 50%
+                      <div class="row">
+                        <div class="col-12 ">
+                          <p style="font-size: x-large;">Financiamiento del 50% de
+                          <img src="../../assets/imagenes/coin.png" style="width: 6%;margin-left: 7px;">{{Mountfinancing}}$$</p>
+                          
+                        </div>
+                      </div>
+                      
                       <div class="row" *ngIf="providerSelected">
                         <div class="col-6 ">
                           <img src="../../assets/imagenes/acreedor.png" style="width: 20%;margin-left: 24px;">
@@ -313,7 +321,6 @@
                 </div>
               </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
